--- a/gitTest/.project
+++ b/gitTest/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>gitTest</name>
+	<name>lolSearchWeb</name>
 	<comment></comment>
 	<projects>
 	</projects>
